ec2_with_ssh_key/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "maral-vpc"
  }
}
